--- a/HCA_Coding_Challenge.ipynb
+++ b/HCA_Coding_Challenge.ipynb
@@ -6,7 +6,7 @@
       "name": "HCA Coding Challenge.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP2QJhhl+iZLiatin6/t3+2",
+      "authorship_tag": "ABX9TyM4ZDgk8YwGXB2qDqt2zV54",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -796,7 +796,7 @@
         "\n",
         "### Things of note: \n",
         "* Age you have a number of different spikes within the ages of 70,80,85... these may be due to certain checkups \n",
-        "* time_in_hospital has a pareto  distribution \n",
+        "* time_in_hospital has a pareto distribution (edit: actually this might be more of a normal distribution but heavily skewed) \n",
         "* The encounter_id has nothing to do with the distribution as it only the encounter occurence. \n",
         " "
       ]
@@ -1612,7 +1612,7 @@
       "source": [
         "tree.plot_tree(clf_tree.fit(X_test,y_test)) "
       ],
-      "execution_count": 192,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
